1.0-pre2
Fixed: Background pictures for games being one pixel off.
Fixed: Double Dealing Character typo.
Fixed: Custom banner checkbox not saving.

1.0-pre (06/03/2019)
Added: Replay downloader. Includes 3 websites + manual link input.
Added: Tray icon including minimization to tray and always-on tray settings. Can be used to launch any game set up in the program.
Added: thcrap directory setting.
Added: Confirmation dialog when removing custom categories/games.
Added: Drag/drop support to Neko Project II and thcrap's directory settings.
Added: Support for IaMP's Config.exe
Added: Complete localization support.
Added: Russian language support. (courtesy of Lensrub)
Changed: Game configuration dialog shows which game you're configuring.
Changed: Normal buttons no longer use the hand cursor.
Changed: The configuration form always shows at the center of the main window.
Changed: Switched to the DD/MM/YYYY format.
Changed: Custom banner group box now shows the supported dimensions.
Changed: thcrap support is now handled through dropboxes with the name of the game and the configuration files.
Fixed: Unformatted localization strings.
Fixed: PC-98 games giving two messageboxes per error.
Fixed: Possibility of Neko Project II's directory not being saved.
Fixed: Colored banner throwing an exception when editing it manually.
Fixed: Custom banner checkbox and text box not saving when the latter is edited manually.
Fixed: Previously filled textboxes being re-filled.
Fixed: Randomizer select buttons are symmetrical and fit more text.
Fixed: The random button stretching by resizing the window.
Fixed: IaMP's text color being black for some reason.
Updated localization files.
Code reorganization

0.8 (11/02/2019)
Added: Actual launch code for PC-98 games (How did I forget that).
Added: Drag/Drop support for game configuration.
Changed: Launching PC-98 games now simply replaces the hdi directory instead of the entire ini file.